--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:screenOrientation="portrait"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
@@ -47,8 +48,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
-android:resource="@drawable/star4" />
+            <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/star4" />
 <meta-data android:name="com.google.firebase.messaging.default_notification_color"
 android:resource="@color/ns_primary" />
 
